gateways/external_gateway.yaml
# gateways/external/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
spec:
  gatewayClassName: kuadrant-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "api.example.notls.com"
