gateways/tls_gateway_sample.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
spec:
  gatewayClassName: kuadrant-gateway
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "api.example.withtls.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: myselfsing-cert
            kind: Secret
            group: ""  # Leave empty for core/v1 Secret
